<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
             android:background="@color/green"
             tools:context="com.example.sarapavas.santaelena.demoFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/myTextStyle.grande"
                android:text="@string/demo"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@color/white">
                <TextView
                    style="@style/myTextStyle.pequeño"
                    android:textColor="@color/black"
                    android:text="@string/tDemo"
                    android:layout_margin="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/cornflowerblue"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:src="@drawable/mapa"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/white">
                <TextView
                    style="@style/myTextStyle.pequeño"
                    android:textColor="@color/black"
                    android:text="@string/tveredas1"
                    android:layout_margin="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <TextView
                        style="@style/myTextStyle.pequeño"
                        android:textColor="@color/black"
                        android:text="@string/tveredas3"
                        android:layout_margin="5dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <TextView
                        style="@style/myTextStyle.pequeño"
                        android:textColor="@color/black"
                        android:text="@string/tveredas2"
                        android:layout_margin="5dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <TextView
                        style="@style/myTextStyle.pequeño"
                        android:textColor="@color/black"
                        android:text="@string/tveredas4"
                        android:layout_margin="5dp"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
