<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sarapavas.santaelena.HotelesActivity"
    android:background="@color/green">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/myTextStyle.grande"
                android:text="@string/turisticos"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:orientation="vertical"
                    android:layout_margin="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tiAventura"
                            android:textColor="@color/floralwhite"
                            android:gravity="center" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/cornflowerblue"
                        android:orientation="vertical"
                        android:layout_margin="8dp"
                        >
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            >

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:layout_margin="2dp"
                                android:src="@drawable/canopy"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:layout_margin="2dp"
                                android:src="@drawable/sendero"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:layout_margin="2dp"
                                android:src="@drawable/sendero2"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:layout_margin="2dp"
                                android:src="@drawable/torrentismo"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:layout_margin="2dp"
                                android:src="@drawable/sendero4"/>
                        </LinearLayout>


                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:layout_margin="10dp">

                    <TextView
                        android:layout_margin="10dp"
                        android:textColor="@color/black"
                        style="@style/myTextStyle.pequeño"
                        android:text="@string/tAventura"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_margin="5dp">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:orientation="vertical"
                    android:layout_margin="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tiArvi"
                            android:textColor="@color/floralwhite"
                            android:gravity="center"
                            android:layout_gravity="end"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/cornflowerblue"
                        android:orientation="vertical"
                        android:layout_margin="8dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:layout_margin="2dp"
                                android:src="@drawable/arvi"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:layout_margin="2dp"
                                android:src="@drawable/arvi22"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:layout_margin="2dp"
                                android:src="@drawable/arvi3"/>
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:layout_margin="10dp">

                    <TextView
                        android:layout_margin="10dp"
                        android:textColor="@color/black"
                        style="@style/myTextStyle.pequeño"
                        android:text="@string/tArvi"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_margin="5dp">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:orientation="vertical"
                    android:layout_margin="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tiSilletas"
                            android:textColor="@color/floralwhite"
                            android:gravity="center"
                            android:layout_gravity="end"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/cornflowerblue"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_margin="2dp"
                            android:src="@drawable/silletas"
                            android:layout_gravity="end"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:layout_margin="10dp">

                    <TextView
                        android:layout_margin="10dp"
                        android:textColor="@color/black"
                        style="@style/myTextStyle.pequeño"
                        android:text="@string/tSilletas"/>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</LinearLayout>
